# MI

./: .gitignore  Makefile  README.md  build.py  mi.py  mi1.cpp  mi_c.py  mi_pd  pyproject.toml  requirements.txt
mi/: __init__.py  mi1.c  mi1.cpp  mi1.h  mi_c.py  mi_pd.py
