[tool.poetry]
name = "mi"
version = "0.1.0"
description = "C++ library for python with MI calculations."
authors = ["volkoshkursk <zaz-pagani@inbox.ru>", "Lev Kovalenko <levozavr@mail.ru>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8"
numpy = ">1.23"
pandas = ">1.4"
toolz = "^0.12.0"
tqdm = ">4.64.0"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = ["poetry>=0.12", "wheel", "setuptools"]
build-backend = "poetry.core.masonry.api"
