[tool.poetry]
name = "text-mi"
version = "0.1.0"
description = "MI calculations based on C extension for python and Pandas."
authors = ["volkoshkursk <zaz-pagani@inbox.ru>", "Lev Kovalenko <levozavr@mail.ru>"]
license = "Apache-2.0 license"
readme = "README.md"
repository = "https://github.com/volkoshkursk/MI"
packages = [{ include = "mi" }]

[tool.poetry.dependencies]
python = ">3.8"
numpy = ">1.23"
pandas = ">1.4"
toolz = "^0.12.0"
tqdm = ">4.64.0"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = ["poetry>=0.12", "wheel", "setuptools"]
build-backend = "poetry.core.masonry.api"
